Fix table cell spacing and colors a lil bit

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -16,7 +16,7 @@ $text: #525252
 $text-dark: #212121
 $text-light: $background
 $tint: #005A9E
-$tint-background: #B3E5FC
+$tint-background: lighten($tint, 65%)
 
 $status: (aside: #673AB7, danger: #B71C1C, error: #B71C1C, info: $tint, neutral: $placeholder, okay: #4CAF50, partial: #F57C00, success: #4CAF50, warning: darken(#FDD835, 20%))
 
